fix: Episode List overflow
Fixes issues noted by @alanpoulain with episode list cards having their duration and labels cut off.
The Episode Title is now cropped per letter instead of per word.
Audio Labels now respect the cardAudio setting.

--- a/common/css.css
+++ b/common/css.css
@@ -89,6 +89,12 @@
   line-height: normal;
 }
 
+.line-4 {
+  display: -webkit-box !important;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
 * {
   -webkit-tap-highlight-color: transparent;
 }
